--- a/tp2_ancine.ipynb
+++ b/tp2_ancine.ipynb
@@ -39,7 +39,7 @@
         "id": "VVOVpuni3aYl"
       },
       "source": [
-        "Os dados utilizados foram retirados do [portal de dados](https://dados.gov.br/dados/conjuntos-dados/crt-obras-nao-publicitarias-registradas) do governo federal. O conjunto de dados selecionado contém informações como nome, tipo, país de origem e requerente de obras não publicitárias registradas pela Ancine entre 2014 e novembro de 2025."
+        "Os dados utilizados foram retirados do [portal de dados](https://dados.gov.br/dados/conjuntos-dados/crt-obras-nao-publicitarias-registradas) do governo federal. O conjunto de dados selecionado contém informações como nome, tipo, país de origem e requerente de obras não publicitárias registradas pela Ancine entre 2005 e novembro de 2025."
       ]
     },
     {
@@ -2328,11 +2328,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 1,
       "metadata": {
         "id": "A-MOLnlJ3aY2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'cur' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mcur\u001b[49m.close()\n\u001b[32m      2\u001b[39m conn.close()\n",
+            "\u001b[31mNameError\u001b[39m: name 'cur' is not defined"
+          ]
+        }
+      ],
       "source": [
         "cur.close()\n",
         "conn.close()"
