--- a/tp2_ancine.ipynb
+++ b/tp2_ancine.ipynb
@@ -2319,35 +2319,13 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "OP1aUuzT3aY2"
-      },
+      "metadata": {},
       "source": [
-        "### Finalização do ambiente"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "id": "A-MOLnlJ3aY2"
-      },
-      "outputs": [
-        {
-          "ename": "NameError",
-          "evalue": "name 'cur' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mcur\u001b[49m.close()\n\u001b[32m      2\u001b[39m conn.close()\n",
-            "\u001b[31mNameError\u001b[39m: name 'cur' is not defined"
-          ]
-        }
-      ],
-      "source": [
-        "cur.close()\n",
-        "conn.close()"
+        "Gabriel Zanotelli - 10\n",
+        "\n",
+        "Yaggo Teixeira - 10\n",
+        "\n",
+        "Cayo Guzansky - 10"
       ]
     }
   ],
